--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keepflowing-business",
+  "name": "keepflowing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,14 +21,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@tailwindcss/postcss": "^4.0.6",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@tailwindcss/postcss": "^4.0.7",
+    "@types/node": "^22.13.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.7",
     "typescript": "^5.7.3"
   }
 }
