--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 DATABASE_URL="your_database_url"
+
+BETTER_AUTH_SECRET="your_secret"
+BETTER_AUTH_URL="http://localhost:3000"
+GOOGLE_CLIENT_ID="your_google_client_id"
+GOOGLE_CLIENT_SECRET="your_google_client_secret"
